syntax = "proto3";

option go_package = "/internal/grpc/waf";

service Transaction {
	rpc CreateAndUpdate (TransactionUpdate) returns (TransactionStatus) {}
	rpc Update (TransactionUpdate) returns (TransactionStatus) {}
	rpc Get (TransactionUpdate) returns (TransactionStatus) {}
	rpc GetCollection (TransactionData) returns (TransactionData) {}
	rpc UploadRawRequest (TransactionRawData) returns (TransactionStatus) {}
	rpc UploadRawRequestBody (TransactionRawData) returns (TransactionStatus) {}
	rpc UploadRawResponse (TransactionRawData) returns (TransactionStatus) {}
	rpc UploadRawResponseBody (TransactionRawData) returns (TransactionStatus) {}
}

enum phase {
	NONE = 0;
    REQUEST_HEADERS = 1;
    REQUEST_BODY = 2;
    RESPONSE_HEADERS = 3;
    RESPONSE_BODY = 4;
    LOGGING = 5;
}

message TransactionUpdate {
	string id = 10;
    phase phase = 11;
}

message TransactionStatus {
	string id = 20;
	bool disrupted = 21;
	
}

message TransactionData {
	string id = 30;
	string collection = 31;
	repeated string data = 32;
	phase phase = 33;
}

message TransactionRawData {
	string id = 40;
	string data = 41;
    phase phase = 42;
}